fixed absolute element on Main page, removed Header visible reducer

--- a/client/src/components/Main/components/MainSection/mainSection.scss
+++ b/client/src/components/Main/components/MainSection/mainSection.scss
@@ -3,53 +3,56 @@
 .main-section {
   margin-top: 114px;
 
-  // .main-text {
-  //   position: absolute;
-  //   top: 22%;
-  //   right: 19%;
-  //   z-index: 6;
-  //   .title {
-  //     @include title-font-style();
-  //     letter-spacing: 7px;
-  //     margin-bottom: 10px;
-  //   }
-  //   .title-name {
-  //     border-bottom: 2px solid #047695;
-  //   }
-  //   .subtitle {
-  //     @include subtitle-font-style();
-  //     letter-spacing: 1px;
-  //   }
-  //   .description {
-  //     @include text-font-style();
-  //     max-width: 450px;
-  //     letter-spacing: 0.5px;
-  //     line-height: 27px;
-  //   }
-  // }
+  .main-text {
+    position: absolute;
+    top: 27%;
+    right: 16%;
+    z-index: 6;
+    .title {
+      @include title-font-style();
+      letter-spacing: 7px;
+      margin-bottom: 10px;
+    }
+    .title-name {
+      border-bottom: 2px solid #047695;
+    }
+    .subtitle {
+      @include subtitle-font-style();
+      letter-spacing: 1px;
+    }
+    .description {
+      @include text-font-style();
+      max-width: 450px;
+      letter-spacing: 0.5px;
+      line-height: 27px;
+    }
+  }
 
   .absolute-wrapp {
     position: relative;
-    // z-index: 0;
-    // width: 700px;
-    // height: 550px;
-    // background-color: $prime-color;
+    left: -12px;
     .image-wrapp {
-      // z-index: -100;
       width: 700px;
       height: 550px;
       @include flex-center(center, flex-end);
       background: radial-gradient(circle, #285366, #000000);
       border-radius: 0 20px 20px 0;
     }
-    .block-absolute {
+    .block-absolute-title-wrapp {
       position: absolute;
       left: 0;
-      top: -100px;
+      top: -120px;
       z-index: -1;
       background-color: #000000;
       width: 500px;
       height: 150px;
+      border-radius: 0 20px 0 0;
+      .title {
+        position: absolute;
+        top: 30px;
+        left: 80px;
+        @include title-font-style($fontSize: 26px, $fontWeight: 400);
+      }
     }
   }
 
